--- a/i/ii/iin/iinet.net.au.html
+++ b/i/ii/iin/iinet.net.au.html
@@ -1,145 +1,137 @@
-<!--The following is the downloaded HTML source of the iinet.net.au privacy policy that was archived on 2001-10-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011004002940id_/http%3A//www.iinet.net.au/help/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iinet.net.au privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601143414id_/http%3A//www.iinet.net.au/about/privacy-policy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head><title>iiNet Privacy Policy</title><script language="JavaScript">
+<html><head>
+<title>iiNet Limited - Privacy Policy</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
+<script language="JavaScript">
 <!--
-var vers = parseInt(navigator.appVersion);
-var appname = navigator.appName.toLowerCase();
-var useragent = navigator.userAgent.toLowerCase();
-var plat = "unix";
-if (useragent.indexOf("win")!=-1) {
-  var plat = "pc";
-  if ((appname.indexOf('netscape')!=-1) && (vers > 3)) {
-    var plat = "pc-netscape";
-  }
-  if ((appname.indexOf("microsoft")!=-1) && (vers > 2)) {
-    var plat = "pc-ie";
-  } 
-} else if (useragent.indexOf("mac")!=-1) {
-  var plat = "mac";
-}
-
-function MM_findObj(n, d) { //v3.0
+function findObj(n, d) {
   var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
     d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
   if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document); return x;
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=findObj(n,d.layers[i].document); return x;
 }
-/* Functions that swaps images. */
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+function swapImage() {
+  var i,j=0,x,a=swapImage.arguments; document.sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=findObj(a[i]))!=null){document.sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
 }
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+function swapImgRestore() {
+  var i,x,a=document.sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
 }
-
-/* Functions that handle preload. */
-function MM_preloadImages() { //v3.0
- var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-   var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-   if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+function preloadImages() {
+ var d=document; if(d.images){ if(!d.p) d.p=new Array();
+   var i,j=d.p.length,a=preloadImages.arguments; for(i=0; i<a.length; i++)
+   if (a[i].indexOf("#")!=0){ d.p[j]=new Image; d.p[j++].src='http://' + location.host + a[i];}}
 }
+//-->
+</script>
 
-document.write("<link rel=stylesheet type=\"text/css\" href=\"http://www.iinet.net.au/includes/"+plat+".css\">");
+<link rel="stylesheet" href="/stylesheets/netscape.css">
+<style type="text/css">
+@import url(/stylesheets/main.css);
+</style>
 
-// -->
-</script><link rel="stylesheet" type="text/css" href="http://www.iinet.net.au/includes/unix.css"></head>
+</head>
 
-
-
-<body bgcolor="#ffffff" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('/artwork/header.2000/header_a_f2.gif', '/artwork/header.2000/header_b_f2.gif','/artwork/header.2000/header_c_f2.gif','/artwork/header.2000/header_d_f2.gif','/artwork/header.2000/header_e_f2.gif','/artwork/header.2000/header_f_f2.gif','/artwork/header.2000/header_g_f2.gif','/artwork/header.2000/header_h_f2.gif','/artwork/header.2000/header_i_f2.gif');">
-
-<table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#333333">
+<body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" rightmargin="0" marginwidth="0" marginheight="0" onload="preloadImages('/images/home_r.gif','/images/products_r.gif','/images/support_r.gif','/images/acctool_r.gif','/images/downloads_r.gif','/images/about_r.gif','/images/contact_r.gif','/images/sitemap_r.gif')">
+<table cellspacing="0" cellpadding="0" width="100%" border="0">
+  <tbody><tr> 
+    <td height="2" background="/images/headertile.gif"> 
+      <table width="640" border="0" cellspacing="0" cellpadding="0">
+        <tbody><tr> 
+          <td height="5" colspan="2"><img height="20" src="/images/headertop.gif" width="568"></td>
+          <td rowspan="2" valign="top" width="72"><img height="56" src="/images/headerangle.gif" width="72"></td>
+        </tr>
+        <tr> 
+          <td width="96" height="2"><a href="/index.html"><img height="36" src="/images/headerlogo.gif" width="96" border="0"></a></td>
+          <td width="472" height="2"><img height="36" src="/images/headergraphic.gif" width="472"></td>
+        </tr>
+        <tr> 
+          <td colspan="3"><a href="/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('Home','','/images/home_r.gif',1)"><img src="/images/home.gif" width="51" height="19" name="Home" border="0" alt="Home"></a><a href="/products/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('Products','','/images/products_r.gif',1)"><img src="/images/iiproducts.gif" width="78" height="19" name="Products" border="0" alt="Products"></a><a href="/support/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('Support','','/images/support_r.gif',1)"><img src="/images/support.gif" width="76" height="19" name="Support" border="0" alt="Support"></a><a href="/members/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('AccountTools','','/images/acctool_r.gif',1)"><img src="/images/acctool.gif" width="113" height="19" name="AccountTools" border="0" alt="Account Tools"></a><a href="/downloads/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('Downloads','','/images/downloads_r.gif',1)"><img src="/images/downloads.gif" width="95" height="19" name="Downloads" border="0" alt="Downloads"></a><a href="/about/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('About','','/images/about_r.gif',1)"><img src="/images/about.gif" width="83" height="19" name="About" border="0" alt="About"></a><a href="/contact/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('Contact','','/images/contact_r.gif',1)"><img src="/images/contact.gif" width="77" height="19" name="Contact" border="0" alt="Contact"></a><a href="/sitemap/index.html" onmouseout="swapImgRestore()" onmouseover="swapImage('Sitemap','','/images/sitemap_r.gif',1)"><img src="/images/iisitemap.gif" width="67" height="19" name="Sitemap" border="0" alt="Sitemap"></a></td>
+        </tr>
+      </tbody></table>
+    </td>
+  </tr>
+</tbody></table>
+<table cellspacing="0" cellpadding="0" width="774" border="0">
   <tbody><tr>
-   <td bgcolor="#ff0000"><img src="/artwork/header.2000/shim.gif" width="136" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="51" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="52" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="53" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="65" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="68" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="58" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="50" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="50" height="1" border="0"></td>
-   <td><img src="/artwork/header.2000/shim.gif" width="100%" height="1" border="0"></td>
-  </tr>
-
-  <tr valign="top"><!-- row 1 -->
-   <td bgcolor="#ff0000"><a href="http://www.iinet.net.au/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_a','','/artwork/header.2000/header_a_f2.gif',1);"><img name="header_a" src="/artwork/header.2000/header_a.gif" width="136" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_b','','/artwork/header.2000/header_b_f2.gif',1);" alt="[iiNet]"><img name="header_b" src="/artwork/header.2000/header_b.gif" width="51" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/help/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_c','','/artwork/header.2000/header_c_f2.gif',1);" alt="Support"><img name="header_c" src="/artwork/header.2000/header_c.gif" width="52" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/products/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_d','','/artwork/header.2000/header_d_f2.gif',1);" alt="Products"><img name="header_d" src="/artwork/header.2000/header_d.gif" width="53" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/members/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_e','','/artwork/header.2000/header_e_f2.gif',1);" alt="Members Tools"><img name="header_e" src="/artwork/header.2000/header_e.gif" width="65" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/downloads/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_f','','/artwork/header.2000/header_f_f2.gif',1);" alt="Downloads"><img name="header_f" src="/artwork/header.2000/header_f.gif" width="68" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/about/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_g','','/artwork/header.2000/header_g_f2.gif',1);" alt="About"><img name="header_g" src="/artwork/header.2000/header_g.gif" width="58" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/contact/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_h','','/artwork/header.2000/header_h_f2.gif',1);" alt="Contact"><img name="header_h" src="/artwork/header.2000/header_h.gif" width="50" height="55" border="0"></a></td>
-   <td><a href="http://www.iinet.net.au/sitemap/" onmouseout="MM_swapImgRestore();" onmouseover="MM_swapImage('header_i','','/artwork/header.2000/header_i_f2.gif',1);" alt="Sitemap"><img name="header_i" src="/artwork/header.2000/header_i.gif" width="50" height="55" border="0"></a></td>
-   <td width="100%"><img name="header_j" src="/artwork/header.2000/header_j.gif" width="17" height="55" border="0"></td>
-  </tr>
-
+    <td valign="top" width="610" height="40" colspan="2"><img src="/images/privacypolicy.gif" border="0" alt=""></td>
+    <td valign="top" width="47" height="40">&nbsp;</td>
+    <td valign="top" width="117" height="40">&nbsp;</td></tr>
+  <tr>
+    <td width="610" colspan="2" background="/images/bluepixeltop.jpg" height="7">&nbsp;</td>
+    <td valign="top" width="47" background="/images/bluepixeltop.jpg" height="7">&nbsp;</td>
+    <td valign="top" width="150" height="7" rowspan="2" background="/images/blueright.jpg">	
+      <table cellspacing="0" cellpadding="0" width="150" border="0">
+        <tbody><tr>
+          <td valign="top" width="141" height="7" background="/images/blueinsidepixeltop.jpg">&nbsp;</td>
+          <td valign="top" width="9" height="8" align="right" background="/images/blueright9.jpg"><img height="8" src="/images/pagetopright.gif" width="9"></td>
+         </tr>
+        <tr>
+          <td valign="top" width="141">
+&nbsp;<img src="/images/related.gif" border="0" alt=""><br>
+<table width="135" cellpadding="2" cellspacing="0" border="0" align="right">
+                    <tbody><tr> 
+                      <td height="19"><a href="/about/privacy-policy-faq.html">Privacy Policy FAQ</a></td>
+                    </tr>
+                    <tr> 
+                      <td height="19"><a href="/about/index.html">About iiNet</a></td>
+                    </tr>
+                    <tr> 
+                      <td height="19"><a href="/products/product-list.html">Product List</a></td>
+                    </tr>
+                    <tr> 
+                      <td height="19"><a href="/sitemap/index.html">Sitemap</a></td>
+                    </tr>
+                    <tr> 
+                      <td height="19"><a href="/index.html">iiNet Home Page</a></td>
+                    </tr>
 </tbody></table>
-
-<table border="0" width="600" cellspacing="0" cellpadding="0" bgcolor="white">
-<tbody><tr><td width="45"><img src="/artwork/clear.gif" width="45" height="1"></td>
-<td valign="top" width="555">
-<img src="/artwork/blank.gif" width="555" height="1" alt=""><p>
-
-
-<img src="/g/clear.gif" height="15" width="15"><br>
-<img src="/products/privacy-policy.title.gif" alt="iiNet Conditions of Use"><br>
-<img src="/g/clear.gif" height="5" width="5"><br>
-This is the iiNet Privacy Policy, a document which outlines our guarantee on your use of iiNet products. For further information see our Privacy Policy <a href="/help/privacy-policy-faq.html">FAQ</a> page.
-</p><p>
-<table>
-<tbody><tr>
-<td align="right" valign="top">1.</td>
-<td>iiNet will not provide any information which you give us to any other organisation or  individual without your express permission or legal compulsion such as a Court order.</td>
-</tr><tr>
-<td align="right" valign="top">2.</td>
-<td>iiNet will comply with the Federal Privacy Commissioner's prevailing Privacy Principles in all respects, and in particular will not misuse your personal information for marketing.</td>
-</tr><tr>
-<td align="right" valign="top">3.</td>
-<td>As part of routine administration, iiNet collects system status information such as login times and help desk records.  These are not on-sold or disclosed to others except as required in paragraph 1.</td>
-</tr><tr>
-<td align="right" valign="top">4.</td>
-<td>All clients may request access to the personal details collected by iiNet in relation to themselves and the use of the account owned by them. iiNet wishes to ensure that such details are always correct and up-to-date, and will amend any inaccuracies or changes to details on request.</td>
-</tr><tr>
-<td align="right" valign="top">5.</td>
-<td>By law, iiNet must retain some client details for a minimum of 5 years. However, iiNet does not retain clients' personal information longer than is necessary for the purposes of compliance with the law and routine administration.</td> 
-</tr><tr>
-<td align="right" valign="top">6.</td>
-<td>If iiNet is ever sold to another organisation, the new owners must also comply with this privacy policy.</td>
-</tr><tr>
-<td align="right" valign="top">7.</td>
-<td>iiNet keeps client information on controlled facilities which are secured against unauthorised access.  Proof of identity will be required before information is released to any person, including the client.</td>
-</tr><tr>
-<td align="right" valign="top">8.</td>
-<td>iiNet typically communicates with its clients by email, and sends all clients a newsletter approximately once per month. In exceptional circumstances, urgent notifications may also be sent out by email.</td>
-</tr><tr>
-<td align="right" valign="top">9.</td>
-<td>iiNet is constantly improving and enhancing its services to clients, and may update this privacy policy from time to time. Any changes to the policy will be advised to clients in our regular newsletter and by updating this page on the iiNet web site.</td>
-</tr><tr>
-<td align="right" valign="top">10.</td>
-<td>If you have any queries or comments concerning the privacy policy, call iiNet support on <br>08 9214 2222 or email <a href="mailto:support@iinet.net.au">support@iinet.net.au</a>.</td>
-</tr>
-</tbody></table>
-</p><p>
-Dated the 1st day of September 2000.
-<!-- footer -->
-<br><br>
-
-</p></td></tr>
-</tbody></table>
-<table cellpadding="7" border="0" cellspacing="0" width="100%" bgcolor="#ffffff">
-<tbody><tr>
-<td align="left" valign="top">
-<hr noshade="" size="1">
-<span class="footer">Copyright 2001 iiNet Limited (ABN 48 068 628 937). All Rights Reserved.<br><a href="http://www.iinet.net.au/contact/">Contact Us</a>. <a href="http://www.iinet.net.au/help/privacy-policy.html">Privacy Policy</a>. </span>
 </td>
-</tr>
+          <td valign="top" width="9" background="/images/blueright9.jpg">&nbsp;</td>
+        </tr>
+       </tbody></table>
+    </td>
+  </tr>
+    
+  
+  <tr> 
+    <td valign="top" width="40">&nbsp;</td>
+    <td valign="top" width="570"> 
+<p>This is the iiNet Privacy Policy, a document which outlines our guarantee on your use of iiNet products. For further information see our <a href="/about/privacy-policy-faq.html">Privacy Policy FAQ</a> page.</p><p>
+
+</p><p>
+1. iiNet will not provide any information which you give us to any other organisation or individual without your express permission or legal compulsion such as a Court order.<br>
+2. iiNet will comply with the Federal Privacy Commissioner's prevailing Privacy Principles in all respects, and in particular will not misuse your personal information for marketing.<br>
+3. As part of routine administration, iiNet collects system status information such as login times and help desk records. These are not on-sold or disclosed to others except as required in paragraph 1.<br>
+4. All clients may request access to the personal details collected by iiNet in relation to themselves and the use of the account owned by them. iiNet wishes to ensure that such details are always correct and up-to-date, and will amend any inaccuracies or changes to details on request.<br>
+5. By law, iiNet must retain some client details for a minimum of 5 years. However, iiNet does not retain clients' personal information longer than is necessary for the purposes of compliance with the law and routine administration.<br>
+6. If iiNet is ever sold to another organisation, the new owners must also comply with this privacy policy.<br>
+7. iiNet keeps client information on controlled facilities which are secured against unauthorised access. Proof of identity will be required before information is released to any person, including the client.<br>
+8. iiNet typically communicates with its clients by email, and sends all clients a newsletter approximately once per month. In exceptional circumstances, urgent notifications may also be sent out by email.<br>
+9. iiNet is constantly improving and enhancing its services to clients, and may update this privacy policy from time to time. Any changes to the policy will be advised to clients in our regular newsletter and by updating this page on the iiNet web site.<br>
+10. If you have any queries or comments concerning the privacy policy, call iiNet support on 08 9214 2222 or email <a href="mailto:support@iinet.net.au">support@iinet.net.au</a>.<br>
+</p>
+
+<p>Dated the 1st day of September 2000.</p>
+<p>&nbsp;</p>
+    </td>
+    <td valign="top" width="47">&nbsp;</td>
+  </tr>
+  </tbody> 
+</table>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tbody><tr>
+<td width="100%" background="http://www.iinet.net.au/images/footerleft.gif">
+<table width="600" cellpadding="4" cellspacing="0" background="">
+<tbody><tr><td class="footer">
+&nbsp;&nbsp;&nbsp;Copyright 2001 iiNet Limited (ABN 48 068 628 937) All Rights Reserved.
+<br>&nbsp;&nbsp;&nbsp;<a href="http://www.iinet.net.au/contact/index.html" class="footer">Contact us</a>  <a href="http://www.iinet.net.au/about/privacy-policy.html" class="footer">Privacy policy</a>
+</td></tr>
 </tbody></table>
-
-
-
+</td></tr>
+</tbody></table>
 
 </body></html>
