--- a/c/ch/chi/chicagoreader.com.html
+++ b/c/ch/chi/chicagoreader.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chicagoreader.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214040917id_/http%3A//www.chicagoreader.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chicagoreader.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601143440id_/http%3A//chicagoreader.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
