--- a/c/ch/cha/chazhound.com.html
+++ b/c/ch/cha/chazhound.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chazhound.com privacy policy that was archived on 2001-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011221051926id_/http%3A//chazhound.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chazhound.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601144303id_/http%3A//www.chazhound.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
