--- a/s/si/sie/sierraclub.org.html
+++ b/s/si/sie/sierraclub.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sierraclub.org privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201035758id_/http%3A//www.sierraclub.org/website/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sierraclub.org privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601145431id_/http%3A//www.sierraclub.org/website/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="keywords" content="privacy, privacy policy">
@@ -11,6 +11,7 @@
 <script language="JavaScript" src="/inc/mouseovers.js" type="text/javascript"></script>
 </head>
 <!--INCLUDE FOR TOP OF PAGE-->
+
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('http://www.sierraclub.org/root_images/globalnav/takeaction_2.gif','http://www.sierraclub.org/root_images/globalnav/getoutdoors_2.gif','http://www.sierraclub.org/root_images/globalnav/joingive_2.gif','http://www.sierraclub.org/root_images/globalnav/insideclub_2.gif','http://www.sierraclub.org/root_images/globalnav/store_2.gif','http://www.sierraclub.org/root_images/globalnav/pressroom_2.gif','http://www.sierraclub.org/root_images/globalnav/sierramag_2.gif','http://www.sierraclub.org/root_images/globalnav/contact_2.gif','http://www.sierraclub.org/root_images/header/go_2.gif','http://www.sierraclub.org/root_images/globalnav/politicsissues_2.gif')">
 <a name="top"></a>
 
@@ -39,21 +40,20 @@
 <td><!--ENVIRONMENTAL UPDATE DROP-DOWN BOX--> 
 
 	<!-- little table for drop-down and noscript go button -->
-	<table border="0"><tbody><tr><td>
-	<form method="post" action="/redirect.asp">
-	<select name="place" size="1" onchange="window.open(this.options[this.selectedIndex].value,'_top')">
-	<option value="http://www.sierraclub.org/environment/" selected="">Select an Issue</option>
-	<option value="http://www.sierraclub.org/energy/">Energy</option>
-	<option value="http://www.sierraclub.org/wildlands/">Wildlands Campaign</option>
-	<option value="http://www.sierraclub.org/human-rights/">Human Rights</option>
-		<option value="http://www.sierraclub.org/cleanwater/">Clean Water</option>
-		<option value="http://www.sierraclub.org/globalwarming/">Stop Global Warming</option>
-			<option value="http://www.sierraclub.org/trade/">Responsible Trade</option>
-	<option value="http://www.sierraclub.org/sprawl/">Stop Sprawl</option>	
-	<option value="http://www.sierraclub.org/logging/">End Commercial Logging</option>	
-	<option value="http://www.sierraclub.org/population/">Global Population</option>
-
-	<option value="http://www.sierraclub.org/environment/more_issues.asp">More Issues</option>
+<table border="0"><tbody><tr><td>
+<form method="post" action="/redirect.asp">
+<select name="place" size="1" onchange="window.open(this.options[this.selectedIndex].value,'_top')">
+<option value="http://www.sierraclub.org/environment/" selected="">Select an Issue</option>
+<option value="http://www.sierraclub.org/cleanwater/">Clean Water</option>
+<option value="http://www.sierraclub.org/energy/">Energy</option>
+<option value="http://www.sierraclub.org/population/">Global Population</option>
+<option value="http://www.sierraclub.org/human-rights/">Human Rights</option>
+<option value="http://www.sierraclub.org/logging/">Protect National Forests</option>	
+<option value="http://www.sierraclub.org/trade/">Responsible Trade</option>
+<option value="http://www.sierraclub.org/sprawl/">Stop Sprawl</option>	
+<option value="http://www.sierraclub.org/globalwarming/">Stop Global Warming</option>
+<option value="http://www.sierraclub.org/wildlands/">Wildlands Campaign</option>
+<option value="http://www.sierraclub.org/environment/more_issues.asp">More Issues</option>
 	</select></form></td><td valign="top">
 	<noscript><input type="image" src="http://www.sierraclub.org/root_images/header/go_1.gif" width="20" height="16" hspace="0" vspace="3" border="0" alt="Go!"></noscript></td></tr>
 	</tbody></table>
@@ -69,60 +69,60 @@
 	<!-- little table for drop-down and noscript go button -->
 	<table border="0"><tbody><tr><td><form method="post" action="/redirect.asp">
 	<select name="place" size="1" onchange="window.open(this.options[this.selectedIndex].value,'_top')">
-	<option value="http://www.sierraclub.org/chapters/" selected="">Select a Place</option>
-	<option value="http://alabama.sierraclub.org">Alabama</option>
-	<option value="http://alaska.sierraclub.org">Alaska</option>
-	<option value="http://arizona.sierraclub.org">Arizona</option>
-	<option value="http://arkansas.sierraclub.org">Arkansas</option>
-	<option value="http://california.sierraclub.org">California</option>
-	<option value="http://www.sierraclub.ca/">Canada</option>
-	<option value="http://www.rmc.sierraclub.org">Colorado</option>
-	<option value="http://connecticut.sierraclub.org">Connecticut</option>
-	<option value="http://delaware.sierraclub.org">Delaware</option>
+	<option value="/" selected="">Select a Place</option>
+	
+	<option value="http://www.sierraclub.org/al">Alabama</option>
+	<option value="http://www.sierraclub.org/ak">Alaska</option>
+	<option value="http://www.sierraclub.org/az">Arizona</option>
+	<option value="http://www.sierraclub.org/ar">Arkansas</option>
+	<option value="http://www.sierraclub.org/ca">California</option>
+	<option value="http://www.sierraclub.org/canada">Canada</option>
+	<option value="http://www.sierraclub.org/co">Colorado</option>
+	<option value="http://www.sierraclub.org/ct">Connecticut</option>
+	<option value="http://www.sierraclub.org/de">Delaware</option>
 	<option value="http://www.sierraclub.org/dc">District of Columbia</option>
-	<option value="http://florida.sierraclub.org">Florida</option>
-	<option value="http://georgia.sierraclub.org">Georgia</option>
-	<option value="http://www.hi.sierraclub.org/">Hawaii</option>
-	<option value="http://idaho.sierraclub.org">Idaho</option>
-	<option value="http://illinois.sierraclub.org">Illinois</option>
-	<option value="http://hoosier.sierraclub.org/">Indiana</option>
-	<option value="http://iowa.sierraclub.org">Iowa</option>
-	<option value="http://www.kssierra.org/">Kansas</option>
-	<option value="http://kentucky.sierraclub.org">Kentucky</option>
-	<option value="http://louisiana.sierraclub.org">Louisiana</option>
-	<option value="http://maine.sierraclub.org">Maine</option>
-	<option value="http://maryland.sierraclub.org">Maryland</option>
-	<option value="http://www.sierraclubmass.org/">Massachusetts</option>
-	<option value="http://michigan.sierraclub.org">Michigan</option>
-	<option value="http://northstar.sierraclub.org/">Minnesota</option>
-	<option value="http://mississippi.sierraclub.org">Mississippi</option>
-	<option value="http://missouri.sierraclub.org">Missouri</option>
-	<option value="http://montana.sierraclub.org">Montana</option>
-	<option value="http://nebraska.sierraclub.org">Nebraska</option>
-	<option value="http://nevada.sierraclub.org">Nevada</option>
-	<option value="http://newhampshire.sierraclub.org">New Hampshire</option>
-	<option value="http://www.enviroweb.org/njsierra/">New Jersey</option>
-	<option value="http://riogrande.sierraclub.org/">New Mexico</option>
-	<option value="http://newyork.sierraclub.org">New York</option>
-	<option value="http://www.sierraclub-nc.org/">North Carolina</option>
-	<option value="http://northdakota.sierraclub.org">North Dakota</option>
-	<option value="http://ohio.sierraclub.org">Ohio</option>
-	<option value="http://oklahoma.sierraclub.org">Oklahoma</option>
-	<option value="http://oregon.sierraclub.org/">Oregon</option>
-	<option value="http://pennsylvania.sierraclub.org">Pennsylvania</option>
-	<option value="http://www.sierraclubri.org/">Rhode Island</option>
-	<option value="http://southcarolina.sierraclub.org">South Carolina</option>
-	<option value="http://southdakota.sierraclub.org">South Dakota</option>
-	<option value="http://tennessee.sierraclub.org">Tennessee</option>
-	<option value="http://www.sierraclub.org/texas/">Texas</option>
-	<option value="http://www.sierraclub.org/utah">Utah</option>
-	<option value="http://vermont.sierraclub.org">Vermont</option>
-	<option value="http://virginia.sierraclub.org">Virginia</option>
-	<option value="http://idaho.sierraclub.org/">Washington (eastern)</option>
-	<option value="http://www.cascadechapter.org/">Washington (western)</option>
-	<option value="http://westvirginia.sierraclub.org/">West Virginia</option>
-	<option value="http://wisconsin.sierraclub.org">Wisconsin</option>
-	<option value="http://wyoming.sierraclub.org">Wyoming</option>
+	<option value="http://www.sierraclub.org/fl">Florida</option>
+	<option value="http://www.sierraclub.org/ga">Georgia</option>
+	<option value="http://www.sierraclub.org/hi">Hawaii</option>
+	<option value="http://www.sierraclub.org/id">Idaho</option>
+	<option value="http://www.sierraclub.org/il">Illinois</option>
+	<option value="http://www.sierraclub.org/in">Indiana</option>
+	<option value="http://www.sierraclub.org/ia">Iowa</option>
+	<option value="http://www.sierraclub.org/ks">Kansas</option>
+	<option value="http://www.sierraclub.org/ky">Kentucky</option>
+	<option value="http://www.sierraclub.org/la">Louisiana</option>
+	<option value="http://www.sierraclub.org/me">Maine</option>
+	<option value="http://www.sierraclub.org/md">Maryland</option>
+	<option value="http://www.sierraclub.org/ma">Massachusetts</option>
+	<option value="http://www.sierraclub.org/mi">Michigan</option>
+	<option value="http://www.sierraclub.org/mn">Minnesota</option>
+	<option value="http://www.sierraclub.org/ms">Mississippi</option>
+	<option value="http://www.sierraclub.org/mo">Missouri</option>
+	<option value="http://www.sierraclub.org/mt">Montana</option>
+	<option value="http://www.sierraclub.org/ne">Nebraska</option>
+	<option value="http://www.sierraclub.org/nv">Nevada</option>
+	<option value="http://www.sierraclub.org/nh">New Hampshire</option>
+	<option value="http://www.sierraclub.org/nj">New Jersey</option>
+	<option value="http://www.sierraclub.org/nm">New Mexico</option>
+	<option value="http://www.sierraclub.org/ny">New York</option>
+	<option value="http://www.sierraclub.org/nc">North Carolina</option>
+	<option value="http://www.sierraclub.org/nd">North Dakota</option>
+	<option value="http://www.sierraclub.org/oh">Ohio</option>
+	<option value="http://www.sierraclub.org/ok">Oklahoma</option>
+	<option value="http://www.sierraclub.org/or">Oregon</option>
+	<option value="http://www.sierraclub.org/pa">Pennsylvania</option>
+	<option value="http://www.sierraclub.org/ri">Rhode Island</option>
+	<option value="http://www.sierraclub.org/sc">South Carolina</option>
+	<option value="http://www.sierraclub.org/sd">South Dakota</option>
+	<option value="http://www.sierraclub.org/tn">Tennessee</option>
+	<option value="http://www.sierraclub.org/tx">Texas</option>
+	<option value="http://www.sierraclub.org/ut">Utah</option>
+	<option value="http://www.sierraclub.org/vt">Vermont</option>
+	<option value="http://www.sierraclub.org/va">Virginia</option>
+	<option value="http://www.sierraclub.org/wa">Washington</option>
+	<option value="http://www.sierraclub.org/wv">West Virginia</option>
+	<option value="http://www.sierraclub.org/wi">Wisconsin</option>
+	<option value="http://www.sierraclub.org/wy">Wyoming</option>
 	</select></form></td><td valign="top"><noscript><input type="image" src="http://www.sierraclub.org/root_images/header/go_1.gif" width="20" height="16" hspace="0" vspace="3" border="0" alt="Go!"></noscript></td></tr></tbody></table>
 	<!-- end little table -->
 
@@ -132,28 +132,34 @@
 
 </td>
 
-<!-- Start of Search box table cell -->
+<!-- Start of my chapter box table cell -->
 <td bgcolor="#9cb3be" valign="top" height="90">
-<table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td valign="bottom"><img src="http://www.sierraclub.org/root_images/spacers/spacer_2x2.gif" width="15" height="19"><br><img src="http://www.sierraclub.org/root_images/header/search_box.gif" width="34" height="10" alt="Search" hspace="3" vspace="3">
-</td></tr>
-<tr><td valign="bottom">
-	<!-- little table for box & go button -->
-	<table border="0">
-	<tbody><tr valign="top">
-	<td valign="top">
-	<form action="http://www.sierraclub.org/search.asp" method="POST" name="searchform" onsubmit="return Checkempty()">
-	<input type="text" name="SearchString" size="9" id="searchbox">
-	</form></td>
-	<td valign="top">
-	<input type="image" src="http://www.sierraclub.org/root_images/header/go_1.gif" width="20" height="16" hspace="0" vspace="3" border="0" alt="Find It!" name="Image1" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','http://www.sierraclub.org/root_images/header/go_2.gif',1)">
-	
-	</td>
-	</tr>
-	</tbody></table>
-	<!-- end of little table -->
 
-</td></tr>
+	<p><table>
+<tbody><tr>
+	<td>
+	
+<!-- dynamic button include here -->
+
+<!-- dynamically determine correct chapter button -->
+	
+<a href="/my_chapter/choose_chapter.asp"><img src="/my_chapter/images/find_my_chapter.gif" border="0" width="158" height="73">
+
+
+</a></td>
+</tr>
+<tr>
+	<td>
+&nbsp;
+	</td>
+</tr>
 </tbody></table>
+		  
+     
+
+
+</p>
+	
 </td>
 </tr>
 <!-- end of first row containing logo & three boxes -->
@@ -169,6 +175,26 @@
 <!--INCLUDE FOR RIGHT SIDE NAV-->
 <!--BEGIN GLOBAL NAV BAR-->
     <td rowspan="2" bgcolor="#c6cede" valign="top">
+	
+	
+
+		<div align="center"><img src="http://www.sierraclub.org/root_images/globalnav/search.gif" alt="Search"></div>
+	
+<div align="center"><!-- little table for box & go button -->
+	<table border="0">
+	<tbody><tr valign="top">
+	<td valign="top">
+	<form action="http://www.sierraclub.org/search.asp" method="POST" name="searchform" onsubmit="return Checkempty()">
+	<input type="text" name="SearchString" size="9" id="searchbox">
+	</form></td>
+	<td valign="top">
+	<input type="image" src="http://www.sierraclub.org/root_images/header/go_1.gif" width="20" height="16" hspace="0" vspace="3" border="0" alt="Find It!" name="Image1" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','http://www.sierraclub.org/root_images/header/go_2.gif',1)">
+	
+	</td>
+	</tr>
+	</tbody></table>
+	<!-- end of little table --></div>
+
 
     <a href="http://www.sierraclub.org/takeaction/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('menu1','','http://www.sierraclub.org/root_images/globalnav/takeaction_2.gif',1)"><img src="http://www.sierraclub.org/root_images/globalnav/takeaction_1.gif" width="165" height="22" alt="Take Action" name="menu1" border="0"></a><br>
 
@@ -192,7 +218,7 @@
 
 <!--NAV BAR PHOTO-->
 
-<img src="http://www.sierraclub.org/root_images/globalnav/globalnav_pic.jpg" width="165" height="250" alt="Explore, Enjoy and Protect" border="0"></td>
+<img src="/root_images/globalnav/globalnav_pic.jpg" width="165" height="250" alt="Explore, Enjoy and Protect" border="0"></td>
 
 </tr>
 
@@ -256,6 +282,11 @@
 <tr> 
 <td width="4" valign="top"><img src="/root_images/subnav/blue_bullet.gif" width="4" height="6" vspace="3"></td>
 <td class="smalltext" valign="top"><a href="/website/copyright.asp">Copyright Notice</a></td>
+</tr>
+
+<tr> 
+<td width="4" valign="top"><img src="/root_images/subnav/blue_bullet.gif" width="4" height="6" vspace="3"></td>
+<td class="smalltext" valign="top"><a href="/website/cookies.asp">Cookies</a></td>
 </tr>
 
 </tbody></table>
